remove all unnecessary lines/comments and add annotations to default parameter classifier python notebooks

--- a/docs/demos/comparisons/SPORF_OpenML_default_100.ipynb
+++ b/docs/demos/comparisons/SPORF_OpenML_default_100.ipynb
@@ -11,6 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### This notebook loads in the OpenML 100 suite and classifies each dataset using the SPORF classifier. The task IDs, accuracies, and runtimes of each dataset are compiled into .txt files for later analysis.\n",
+    "#### Kernel dies repeatedly during runs, so either using a different server or running the code with batches of the datasets rather than all at once is recommended."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Load in datasets"
    ]
   },
@@ -56,7 +64,7 @@
    "source": [
     "clf = sklearn.pipeline.make_pipeline(sklearn.preprocessing.Imputer(), rerfClassifier())\n",
     "\n",
-    "for task_id in benchmark_suite.tasks[97:]:  # iterate over all tasks\n",
+    "for task_id in benchmark_suite.tasks[97:]:  # iterate over all tasks, change indices inside square brackets to specify batch of datasets\n",
     "    try:\n",
     "        f = open(\"SPORF_accuracies_100.txt\",\"a\")\n",
     "        startTime = datetime.now()\n",
