--- a/docs/demos/comparisons/sklearnClassifiers_OpenML_100.ipynb
+++ b/docs/demos/comparisons/sklearnClassifiers_OpenML_100.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### This notebook loads in the OpenML 100 suite and classifies each dataset using the sklearn RandomForest classifier. The task IDs, accuracies, and runtimes of each dataset are compiled into .txt files for later analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Load in dataset"
    ]
   },
@@ -24,241 +31,6 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "benchmark_suite = openml.study.get_suite('OpenML100')  # obtain the benchmark suite"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# DecisionTreeClassifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data set: kr-vs-kp; Accuracy: 1.00\n",
-      "Time: 0:00:01.633661\n",
-      "Data set: letter; Accuracy: 0.88\n",
-      "Time: 0:00:01.925707\n",
-      "Data set: balance-scale; Accuracy: 0.78\n",
-      "Time: 0:00:00.791139\n",
-      "Data set: mfeat-factors; Accuracy: 0.89\n",
-      "Time: 0:00:02.825945\n",
-      "Data set: mfeat-fourier; Accuracy: 0.75\n",
-      "Time: 0:00:02.270047\n",
-      "Data set: breast-w; Accuracy: 0.95\n",
-      "Time: 0:00:00.669812\n",
-      "Data set: mfeat-karhunen; Accuracy: 0.82\n",
-      "Time: 0:00:01.809728\n",
-      "Data set: mfeat-morphological; Accuracy: 0.66\n",
-      "Time: 0:00:00.788507\n",
-      "Data set: mfeat-pixel; Accuracy: 0.86\n",
-      "Time: 0:00:06.652601\n",
-      "Data set: car; Accuracy: 0.98\n",
-      "Time: 0:00:00.851092\n",
-      "Data set: mfeat-zernike; Accuracy: 0.67\n",
-      "Time: 0:00:01.736512\n",
-      "Data set: cmc; Accuracy: 0.48\n",
-      "Time: 0:00:00.836526\n",
-      "Data set: mushroom; Accuracy: 1.00\n",
-      "Time: 0:00:01.389444\n",
-      "Data set: optdigits; Accuracy: 0.91\n",
-      "Time: 0:00:01.598116\n",
-      "Data set: credit-approval; Accuracy: 0.81\n",
-      "Time: 0:00:00.979814\n",
-      "Data set: credit-g; Accuracy: 0.69\n",
-      "Time: 0:00:01.020467\n",
-      "Data set: pendigits; Accuracy: 0.96\n",
-      "Time: 0:00:01.198608\n",
-      "Data set: segment; Accuracy: 0.96\n",
-      "Time: 0:00:00.848718\n",
-      "Data set: diabetes; Accuracy: 0.70\n",
-      "Time: 0:00:00.737871\n",
-      "Data set: soybean; Accuracy: 0.93\n",
-      "Time: 0:00:01.424434\n",
-      "Data set: spambase; Accuracy: 0.92\n",
-      "Time: 0:00:01.536300\n",
-      "Data set: splice; Accuracy: 0.91\n",
-      "Time: 0:00:02.452824\n",
-      "Data set: tic-tac-toe; Accuracy: 0.87\n",
-      "Time: 0:00:00.887397\n",
-      "Data set: vehicle; Accuracy: 0.68\n",
-      "Time: 0:00:00.809714\n",
-      "Data set: waveform-5000; Accuracy: 0.75\n",
-      "Time: 0:00:02.333673\n",
-      "Data set: electricity; Accuracy: 0.89\n",
-      "Time: 0:00:03.679798\n",
-      "Data set: satimage; Accuracy: 0.85\n",
-      "Time: 0:00:01.675351\n",
-      "Data set: eucalyptus; Accuracy: 0.59\n",
-      "Time: 0:00:00.839778\n",
-      "Data set: sick; Accuracy: 0.99\n",
-      "Time: 0:00:01.158550\n",
-      "Data set: vowel; Accuracy: 0.83\n",
-      "Time: 0:00:00.908934\n",
-      "Data set: isolet; Accuracy: 0.82\n",
-      "Time: 0:00:48.549058\n",
-      "Data set: scene; Accuracy: 0.94\n",
-      "Time: 0:00:05.884367\n",
-      "Data set: monks-problems-1; Accuracy: 0.97\n",
-      "Time: 0:00:00.943947\n",
-      "Data set: monks-problems-2; Accuracy: 1.00\n",
-      "Time: 0:00:01.037013\n",
-      "Data set: monks-problems-3; Accuracy: 0.97\n",
-      "Time: 0:00:00.920354\n",
-      "Data set: JapaneseVowels; Accuracy: 0.88\n",
-      "Time: 0:00:02.211070\n",
-      "Data set: synthetic_control; Accuracy: 0.91\n",
-      "Time: 0:00:01.072526\n",
-      "Data set: irish; Accuracy: 1.00\n",
-      "Time: 0:00:00.973077\n",
-      "Data set: analcatdata_authorship; Accuracy: 0.93\n",
-      "Time: 0:00:00.969858\n",
-      "Data set: analcatdata_dmft; Accuracy: 0.21\n",
-      "Time: 0:00:00.873600\n",
-      "Data set: profb; Accuracy: 0.58\n",
-      "Time: 0:00:00.814649\n",
-      "Data set: collins; Accuracy: 1.00\n",
-      "Time: 0:00:00.809727\n",
-      "Data set: mnist_784; Accuracy: 0.87\n",
-      "Time: 0:04:06.887421\n",
-      "Data set: sylva_agnostic; Accuracy: 0.99\n",
-      "Time: 0:00:06.857098\n",
-      "Data set: gina_agnostic; Accuracy: 0.85\n",
-      "Time: 0:00:13.178314\n",
-      "Data set: ada_agnostic; Accuracy: 0.79\n",
-      "Time: 0:00:01.049302\n",
-      "Data set: mozilla4; Accuracy: 0.93\n",
-      "Time: 0:00:01.288638\n",
-      "Data set: pc4; Accuracy: 0.89\n",
-      "Time: 0:00:00.839940\n",
-      "Data set: pc3; Accuracy: 0.87\n",
-      "Time: 0:00:00.935350\n",
-      "Data set: jm1; Accuracy: 0.75\n",
-      "Time: 0:00:01.876028\n",
-      "Data set: kc2; Accuracy: 0.79\n",
-      "Time: 0:00:00.795280\n",
-      "Data set: kc1; Accuracy: 0.82\n",
-      "Time: 0:00:00.827693\n",
-      "Data set: pc1; Accuracy: 0.91\n",
-      "Time: 0:00:00.867133\n",
-      "Data set: KDDCup09_churn; Accuracy: 0.86\n",
-      "Time: 0:01:07.976583\n",
-      "Data set: KDDCup09_upselling; Accuracy: 0.90\n",
-      "Time: 0:00:57.241267\n",
-      "Data set: MagicTelescope; Accuracy: 0.82\n",
-      "Time: 0:00:03.527444\n",
-      "Data set: adult; Accuracy: 0.82\n",
-      "Time: 0:00:03.841811\n",
-      "Data set: wilt; Accuracy: 0.98\n",
-      "Time: 0:00:00.648296\n",
-      "Data set: wdbc; Accuracy: 0.93\n",
-      "Time: 0:00:01.096442\n",
-      "Data set: micro-mass; Accuracy: 0.77\n",
-      "Time: 0:00:04.256511\n",
-      "Data set: phoneme; Accuracy: 0.87\n",
-      "Time: 0:00:01.007240\n",
-      "Data set: one-hundred-plants-margin; Accuracy: 0.47\n",
-      "Time: 0:00:01.577744\n",
-      "Data set: one-hundred-plants-shape; Accuracy: 0.45\n",
-      "Time: 0:00:02.477866\n",
-      "Data set: one-hundred-plants-texture; Accuracy: 0.52\n",
-      "Time: 0:00:01.827168\n",
-      "Data set: qsar-biodeg; Accuracy: 0.81\n",
-      "Time: 0:00:00.831625\n",
-      "Data set: wall-robot-navigation; Accuracy: 0.99\n",
-      "Time: 0:00:01.184776\n",
-      "Data set: semeion; Accuracy: 0.75\n",
-      "Time: 0:00:01.403192\n",
-      "Data set: steel-plates-fault; Accuracy: 1.00\n",
-      "Time: 0:00:00.869565\n",
-      "Data set: tamilnadu-electricity; Accuracy: 1.00\n",
-      "Time: 0:00:01.875678\n",
-      "Data set: hill-valley; Accuracy: 0.54\n",
-      "Time: 0:00:02.530960\n",
-      "Data set: ilpd; Accuracy: 0.65\n",
-      "Time: 0:00:00.711857\n",
-      "Data set: madelon; Accuracy: 0.75\n",
-      "Time: 0:00:07.976747\n",
-      "Data set: nomao; Accuracy: 0.95\n",
-      "Time: 0:00:12.276337\n",
-      "Data set: ozone-level-8hr; Accuracy: 0.90\n",
-      "Time: 0:00:01.528762\n",
-      "Data set: cardiotocography; Accuracy: 1.00\n",
-      "Time: 0:00:00.820565\n",
-      "Data set: climate-model-simulation-crashes; Accuracy: 0.86\n",
-      "Time: 0:00:00.703916\n",
-      "Data set: cnae-9; Accuracy: 0.86\n",
-      "Time: 0:00:02.984310\n",
-      "Data set: eeg-eye-state; Accuracy: 0.84\n",
-      "Time: 0:00:01.994212\n",
-      "Data set: first-order-theorem-proving; Accuracy: 0.55\n",
-      "Time: 0:00:02.608764\n",
-      "Data set: gas-drift; Accuracy: 0.97\n",
-      "Time: 0:00:19.014554\n",
-      "Data set: banknote-authentication; Accuracy: 0.99\n",
-      "Time: 0:00:00.736970\n",
-      "Data set: blood-transfusion-service-center; Accuracy: 0.71\n",
-      "Time: 0:00:00.693325\n",
-      "Data set: artificial-characters; Accuracy: 0.94\n",
-      "Time: 0:00:01.026052\n",
-      "Data set: bank-marketing; Accuracy: 0.87\n",
-      "Time: 0:00:03.881774\n",
-      "Data set: Bioresponse; Accuracy: 0.74\n",
-      "Time: 0:00:18.336667\n",
-      "Data set: cjs; Accuracy: 0.99\n",
-      "Time: 0:00:01.808478\n",
-      "Data set: cylinder-bands; Accuracy: 0.72\n",
-      "Time: 0:00:01.283010\n",
-      "Data set: GesturePhaseSegmentationProcessed; Accuracy: 0.51\n",
-      "Time: 0:00:04.502048\n",
-      "Data set: har; Accuracy: 0.93\n",
-      "Time: 0:01:11.505908\n",
-      "Error in34536\n",
-      "Data set: PhishingWebsites; Accuracy: 0.96\n",
-      "Time: 0:00:01.621526\n",
-      "Data set: MiceProtein; Accuracy: 1.00\n",
-      "Time: 0:00:01.308167\n",
-      "Data set: Amazon_employee_access; Accuracy: 0.93\n",
-      "Time: 0:00:03.792021\n",
-      "Data set: dresses-sales; Accuracy: 0.53\n",
-      "Time: 0:00:00.944495\n",
-      "Data set: LED-display-domain-7digit; Accuracy: 0.71\n",
-      "Time: 0:00:00.765388\n",
-      "Data set: texture; Accuracy: 0.93\n",
-      "Time: 0:00:02.242192\n",
-      "Data set: Australian; Accuracy: 0.84\n",
-      "Time: 0:00:00.746011\n",
-      "Data set: connect-4; Accuracy: 0.74\n",
-      "Time: 0:00:06.503657\n",
-      "Data set: higgs; Accuracy: 0.63\n",
-      "Time: 0:00:40.641122\n",
-      "Data set: SpeedDating; Accuracy: 0.79\n",
-      "Time: 0:00:05.258056\n"
-     ]
-    }
-   ],
-   "source": [
-    "# build a scikit-learn classifier\n",
-    "clf = sklearn.pipeline.make_pipeline(sklearn.preprocessing.Imputer(), DecisionTreeClassifier())\n",
-    "\n",
-    "for task_id in benchmark_suite.tasks:  # iterate over all tasks\n",
-    "    try:\n",
-    "        startTime = datetime.now()\n",
-    "        task = openml.tasks.get_task(task_id)  # download the OpenML task\n",
-    "        openml.config.apikey = '204cdba18d110fd68ad24b131ea92030'  # set the OpenML Api Key\n",
-    "        run = openml.runs.run_model_on_task(clf, task)  # run the classifier on the task\n",
-    "        score = run.get_metric_fn(sklearn.metrics.accuracy_score)  # print accuracy score\n",
-    "        print('Data set: %s; Accuracy: %0.2f' % (task.get_dataset().name,score.mean()))\n",
-    "        print('Time: '+ str(datetime.now() - startTime))\n",
-    "    except:\n",
-    "        print('Error in' + str(task_id))"
    ]
   },
   {
